build: enable Error Prone (warn-only) + Dependabot; NullAway/SpotBugs blocked by verified Java 26 incompatibility
Error Prone runs on every mvn compile via error_prone_core:2.50.0 - the
only version that understands Java 26's javac internals (2.39.0 throws
ClassNotFoundException on com.sun.tools.javac.code.Flags$Flag, too old
for this JDK). Runs with -XepAllErrorsAsWarnings so it never breaks the
build; 36 real findings surfaced (19x JavaTimeDefaultTimeZone, 7x
StringCaseLocaleUsage - including in TickerNormalizer itself, 3x
NonApiType, 3x MissingSummary, 2x JavaUtilDate, 1x UnusedVariable, 1x
CanonicalDuration). Fixing them is separate, undecided work - this task
was about turning the tool on, not clearing findings.

Real config bug hit and fixed along the way: --add-exports/--add-opens
were first passed as maven-compiler-plugin compilerArgs with a -J prefix,
which failed silently (zero diagnostic output). --add-opens is a JVM
flag for runtime reflection, not a javac option - it has no effect
there regardless of fork. The annotation processor runs in the same JVM
that's compiling; with fork=false (default) that's Maven's own JVM, so
the flags belong in backend/.mvn/jvm.config, not compilerArgs.

NullAway 0.12.7 and SpotBugs 4.9.3.0 are NOT included - both are
verified, not assumed, blocked by Java 26 (released ~5 months ago):
NullAway expects a class (com.google.errorprone.predicates.type.
DescendantOf) that no longer exists in error_prone_core 2.50.0; SpotBugs'
bundled ASM can't parse class file major version 70 at all
(IllegalArgumentException: Unsupported class file major version 70).
SpotBugs stays declared in pom.xml with no bound executions (inert,
doesn't run in a normal build) so it's ready once a compatible release
ships.

Adds .github/dependabot.yml (maven backend, npm frontend, langchain4j
grouped into one PR given its already-documented independent release
cycle) - needs the user to enable Dependabot in GitHub repo settings,
that part is outside what I 